@@ -147,6 +147,9 @@ Release 2.1.0-beta - UNRELEASED
 
   BUG FIXES
 
+    HADOOP-9451. Fault single-layer config if node group topology is enabled.
+    (Junping Du via llu)
+
     HADOOP-9294. GetGroupsTestBase fails on Windows. (Chris Nauroth via suresh)
 
     HADOOP-9305. Add support for running the Hadoop client on 64-bit AIX. (atm)
